[gd_scene load_steps=57 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://wall.tres" type="TileSet" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/BG.png" type="Texture" id=5]
[ext_resource path="res://ScoreUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ExitPortal.png" type="Texture" id=7]
[ext_resource path="res://assets/PausePanel.png" type="Texture" id=8]
[ext_resource path="res://assets/PauseButton.png" type="Texture" id=9]
[ext_resource path="res://assets/ResumeButton.png" type="Texture" id=10]
[ext_resource path="res://assets/QuitButton.png" type="Texture" id=11]
[ext_resource path="res://assets/RestartButton.png" type="Texture" id=12]
[ext_resource path="res://PanelUI.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/fonnts.com-Neato-Serif-.otf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/heart.png" type="Texture" id=15]
[ext_resource path="res://ShieldPowerUp.tscn" type="PackedScene" id=16]
[ext_resource path="res://FartPowerUp.tscn" type="PackedScene" id=17]
[ext_resource path="res://FreezePowerUp.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Audio Asset/done (height challenge).mp3" type="AudioStream" id=19]
[ext_resource path="res://assets/Complete.png" type="Texture" id=20]
[ext_resource path="res://assets/CLLevelButton.png" type="Texture" id=21]
[ext_resource path="res://assets/CLRestartButton.png" type="Texture" id=22]
[ext_resource path="res://assets/CLNextButton.png" type="Texture" id=23]
[ext_resource path="res://assets/CLHomeButton.png" type="Texture" id=24]
[ext_resource path="res://assets/4.png" type="Texture" id=25]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 160.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 241, 51 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 241, 51 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 241, 51 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 270, 55 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 270, 55 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 270, 55 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 156, 54 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 156, 54 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 156, 54 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="DynamicFont" id=15]
size = 100
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxTexture" id=30]

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="DynamicFont" id=31]
size = 40
outline_size = 3
outline_color = Color( 0.351178, 0.0647926, 0.385742, 1 )
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 14 )

[node name="world" type="Node2D"]
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 4136.0
margin_bottom = 2400.0
texture = ExtResource( 5 )
stretch_mode = 7

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 120 )

[node name="Coin2" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 224, 120 )

[node name="Coin3" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 416, 120 )

[node name="Coin5" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 320 )

[node name="Coin6" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 432 )

[node name="Coin8" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 432 )

[node name="Coin9" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 328 )

[node name="Coin10" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 536 )

[node name="Coin11" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 120 )

[node name="Coin12" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 608, 120 )

[node name="Coin13" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 640 )

[node name="Coin14" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 224, 640 )

[node name="Coin15" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 640 )

[node name="Coin16" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 424, 320 )

[node name="Coin17" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 520, 320 )

[node name="Coin18" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 432 )

[node name="Coin20" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 936 )

[node name="Coin19" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 536 )

[node name="Coin21" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 648 )

[node name="Coin22" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 128, 840 )

[node name="Coin23" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 224, 840 )

[node name="Coin24" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 744 )

[node name="Coin25" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 512, 840 )

[node name="Coin26" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 416, 840 )

[node name="Coin27" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 840 )

[node name="Coin7" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 224, 432 )

[node name="Coin4" parent="Coins" instance=ExtResource( 4 )]
position = Vector2( 320, 216 )

[node name="FreezePowerUp" parent="Coins" instance=ExtResource( 18 )]
position = Vector2( 319, 641 )
scale = Vector2( 0.194123, 0.193014 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65550, 0, 0, 65556, 0, 0, 65562, 0, 0, 65568, 0, 0, 65571, 0, 0, 65586, 0, 0, 65594, 0, 0, 65600, 0, 0, 131086, 0, 0, 131092, 0, 0, 131098, 0, 0, 131104, 0, 0, 131107, 0, 0, 131122, 0, 0, 131130, 0, 0, 131136, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196622, 0, 0, 196625, 0, 0, 196628, 0, 0, 196631, 0, 0, 196634, 0, 0, 196637, 0, 0, 196640, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 0, 0, 196662, 0, 0, 196666, 0, 0, 196672, 0, 0, 262144, 0, 0, 262147, 0, 0, 262153, 0, 0, 262161, 0, 0, 262167, 0, 0, 262170, 0, 0, 262173, 0, 0, 262176, 0, 0, 262179, 0, 0, 262182, 0, 0, 262191, 0, 0, 262202, 0, 0, 262205, 0, 0, 262208, 0, 0, 327680, 0, 0, 327683, 0, 0, 327689, 0, 0, 327697, 0, 0, 327703, 0, 0, 327706, 0, 0, 327709, 0, 0, 327712, 0, 0, 327715, 0, 0, 327718, 0, 0, 327727, 0, 0, 327738, 0, 0, 327741, 0, 0, 327744, 0, 0, 393216, 0, 0, 393222, 0, 0, 393225, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393242, 0, 0, 393245, 0, 0, 393248, 0, 0, 393251, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 393261, 0, 0, 393262, 0, 0, 393263, 0, 0, 393264, 0, 0, 393265, 0, 0, 393266, 0, 0, 393267, 0, 0, 393268, 0, 0, 393269, 0, 0, 393270, 0, 0, 393271, 0, 0, 393277, 0, 0, 393280, 0, 0, 458752, 0, 0, 458758, 0, 0, 458761, 0, 0, 458781, 0, 0, 458784, 0, 0, 458794, 0, 0, 458807, 0, 0, 458813, 0, 0, 458816, 0, 0, 524288, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524297, 0, 0, 524317, 0, 0, 524320, 0, 0, 524330, 0, 0, 524343, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 589824, 0, 0, 589830, 0, 0, 589833, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589856, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589873, 0, 0, 589876, 0, 0, 589879, 0, 0, 589888, 0, 0, 655360, 0, 0, 655366, 0, 0, 655369, 0, 0, 655392, 0, 0, 655409, 0, 0, 655412, 0, 0, 655415, 0, 0, 655424, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720905, 0, 0, 720928, 0, 0, 720945, 0, 0, 720948, 0, 0, 720951, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720960, 0, 0, 786432, 0, 0, 786441, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 0, 0, 786480, 0, 0, 786481, 0, 0, 786484, 0, 0, 786487, 0, 0, 786490, 0, 0, 786496, 0, 0, 851968, 0, 0, 851977, 0, 0, 851983, 0, 0, 852017, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852026, 0, 0, 852032, 0, 0, 917504, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917519, 0, 0, 917553, 0, 0, 917559, 0, 0, 917562, 0, 0, 917563, 0, 0, 917564, 0, 0, 917565, 0, 0, 917566, 0, 0, 917567, 0, 0, 917568, 0, 0, 983040, 0, 0, 983043, 0, 0, 983052, 0, 0, 983055, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983089, 0, 0, 983095, 0, 0, 983104, 0, 0, 1048576, 0, 0, 1048579, 0, 0, 1048588, 0, 0, 1048591, 0, 0, 1048599, 0, 0, 1048618, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048640, 0, 0, 1114112, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114127, 0, 0, 1114161, 0, 0, 1114167, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114176, 0, 0, 1179648, 0, 0, 1179660, 0, 0, 1179663, 0, 0, 1179697, 0, 0, 1179703, 0, 0, 1179709, 0, 0, 1179712, 0, 0, 1245184, 0, 0, 1245196, 0, 0, 1245199, 0, 0, 1245207, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245226, 0, 0, 1245233, 0, 0, 1245239, 0, 0, 1245245, 0, 0, 1245248, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310735, 0, 0, 1310750, 0, 0, 1310755, 0, 0, 1310769, 0, 0, 1310772, 0, 0, 1310775, 0, 0, 1310776, 0, 0, 1310777, 0, 0, 1310778, 0, 0, 1310779, 0, 0, 1310780, 0, 0, 1310781, 0, 0, 1310784, 0, 0, 1376256, 0, 0, 1376265, 0, 0, 1376271, 0, 0, 1376305, 0, 0, 1376308, 0, 0, 1376311, 0, 0, 1376320, 0, 0, 1441792, 0, 0, 1441801, 0, 0, 1441807, 0, 0, 1441815, 0, 0, 1441834, 0, 0, 1441841, 0, 0, 1441844, 0, 0, 1441847, 0, 0, 1441856, 0, 0, 1507328, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507374, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507380, 0, 0, 1507383, 0, 0, 1507386, 0, 0, 1507387, 0, 0, 1507388, 0, 0, 1507389, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1507392, 0, 0, 1572864, 0, 0, 1572876, 0, 0, 1572879, 0, 0, 1572916, 0, 0, 1572919, 0, 0, 1572922, 0, 0, 1572928, 0, 0, 1638400, 0, 0, 1638412, 0, 0, 1638415, 0, 0, 1638452, 0, 0, 1638455, 0, 0, 1638458, 0, 0, 1638464, 0, 0, 1703936, 0, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1703951, 0, 0, 1703952, 0, 0, 1703953, 0, 0, 1703954, 0, 0, 1703955, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703961, 0, 0, 1703962, 0, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703977, 0, 0, 1703978, 0, 0, 1703979, 0, 0, 1703980, 0, 0, 1703981, 0, 0, 1703982, 0, 0, 1703983, 0, 0, 1703984, 0, 0, 1703985, 0, 0, 1703986, 0, 0, 1703987, 0, 0, 1703988, 0, 0, 1703991, 0, 0, 1703994, 0, 0, 1703997, 0, 0, 1704000, 0, 0, 1769472, 0, 0, 1769479, 0, 0, 1769482, 0, 0, 1769487, 0, 0, 1769495, 0, 0, 1769502, 0, 0, 1769509, 0, 0, 1769515, 0, 0, 1769521, 0, 0, 1769527, 0, 0, 1769530, 0, 0, 1769533, 0, 0, 1769536, 0, 0, 1835008, 0, 0, 1835015, 0, 0, 1835018, 0, 0, 1835023, 0, 0, 1835031, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835051, 0, 0, 1835057, 0, 0, 1835063, 0, 0, 1835066, 0, 0, 1835067, 0, 0, 1835068, 0, 0, 1835069, 0, 0, 1835072, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900546, 0, 0, 1900547, 0, 0, 1900548, 0, 0, 1900551, 0, 0, 1900554, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900562, 0, 0, 1900563, 0, 0, 1900564, 0, 0, 1900567, 0, 0, 1900571, 0, 0, 1900584, 0, 0, 1900587, 0, 0, 1900593, 0, 0, 1900596, 0, 0, 1900599, 0, 0, 1900608, 0, 0, 1966080, 0, 0, 1966084, 0, 0, 1966087, 0, 0, 1966090, 0, 0, 1966093, 0, 0, 1966098, 0, 0, 1966103, 0, 0, 1966107, 0, 0, 1966120, 0, 0, 1966123, 0, 0, 1966126, 0, 0, 1966129, 0, 0, 1966132, 0, 0, 1966135, 0, 0, 1966144, 0, 0, 2031616, 0, 0, 2031620, 0, 0, 2031623, 0, 0, 2031629, 0, 0, 2031634, 0, 0, 2031639, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031659, 0, 0, 2031662, 0, 0, 2031665, 0, 0, 2031668, 0, 0, 2031671, 0, 0, 2031674, 0, 0, 2031675, 0, 0, 2031676, 0, 0, 2031677, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2031680, 0, 0, 2097152, 0, 0, 2097159, 0, 0, 2097165, 0, 0, 2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097175, 0, 0, 2097192, 0, 0, 2097195, 0, 0, 2097198, 0, 0, 2097201, 0, 0, 2097204, 0, 0, 2097207, 0, 0, 2097210, 0, 0, 2097216, 0, 0, 2162688, 0, 0, 2162695, 0, 0, 2162701, 0, 0, 2162704, 0, 0, 2162711, 0, 0, 2162728, 0, 0, 2162731, 0, 0, 2162734, 0, 0, 2162737, 0, 0, 2162740, 0, 0, 2162743, 0, 0, 2162746, 0, 0, 2162752, 0, 0, 2228224, 0, 0, 2228227, 0, 0, 2228228, 0, 0, 2228229, 0, 0, 2228230, 0, 0, 2228231, 0, 0, 2228234, 0, 0, 2228237, 0, 0, 2228240, 0, 0, 2228244, 0, 0, 2228245, 0, 0, 2228246, 0, 0, 2228247, 0, 0, 2228248, 0, 0, 2228249, 0, 0, 2228250, 0, 0, 2228251, 0, 0, 2228252, 0, 0, 2228253, 0, 0, 2228254, 0, 0, 2228255, 0, 0, 2228256, 0, 0, 2228257, 0, 0, 2228258, 0, 0, 2228259, 0, 0, 2228260, 0, 0, 2228261, 0, 0, 2228264, 0, 0, 2228267, 0, 0, 2228270, 0, 0, 2228273, 0, 0, 2228276, 0, 0, 2228279, 0, 0, 2228282, 0, 0, 2228285, 0, 0, 2228288, 0, 0, 2293760, 0, 0, 2293770, 0, 0, 2293776, 0, 0, 2293800, 0, 0, 2293806, 0, 0, 2293812, 0, 0, 2293815, 0, 0, 2293821, 0, 0, 2359296, 0, 0, 2359306, 0, 0, 2359312, 0, 0, 2359336, 0, 0, 2359342, 0, 0, 2359348, 0, 0, 2359351, 0, 0, 2359357, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0, 2424896, 0, 0 )

[node name="BigFartPowerUp" parent="." instance=ExtResource( 17 )]
position = Vector2( 297, 441 )
rotation = 0.136912
scale = Vector2( 0.194084, 0.212132 )

[node name="ShieldPowerUp" parent="." instance=ExtResource( 16 )]
position = Vector2( 703, 159 )
scale = Vector2( 0.7, 0.7 )

[node name="ExitPortal" type="Area2D" parent="."]
rotation = 0.136912

[node name="Sprite" type="Sprite" parent="ExitPortal"]
position = Vector2( 624, 1208 )
scale = Vector2( 0.468, 0.5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitPortal"]
position = Vector2( 624, 1208 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 64.0001, 125 )

[node name="Enemy5" parent="." instance=ExtResource( 3 )]
position = Vector2( 693, 1034 )

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1801, 509 )

[node name="Enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1208, 325 )

[node name="Enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 653 )

[node name="ScoreUI" type="CanvasLayer" parent="."]

[node name="ScoreUI" parent="ScoreUI" instance=ExtResource( 6 )]

[node name="PanelUI" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="PausePanel" type="Panel" parent="PanelUI"]
pause_mode = 2
margin_left = 320.0
margin_top = 136.0
margin_right = 1120.0
margin_bottom = 932.0
rect_scale = Vector2( 0.438024, 0.429592 )
custom_styles/panel = SubResource( 2 )

[node name="ResumeButton" type="Button" parent="PanelUI/PausePanel"]
pause_mode = 2
margin_left = 224.0
margin_top = 380.0
margin_right = 616.0
margin_bottom = 460.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="RestartButton" type="Button" parent="PanelUI/PausePanel"]
pause_mode = 2
margin_left = 207.0
margin_top = 500.0
margin_right = 639.0
margin_bottom = 584.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="QuitButton" type="Button" parent="PanelUI/PausePanel"]
pause_mode = 2
margin_left = 280.0
margin_top = 628.0
margin_right = 536.0
margin_bottom = 712.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )

[node name="PauseButton" type="Button" parent="PanelUI"]
margin_left = 965.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 57.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )

[node name="GameOverLabel" type="Label" parent="PanelUI"]
margin_left = 128.0
margin_top = 200.0
margin_right = 920.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 15 )
text = "Game Over!"
align = 1

[node name="CollectStarsLabel" type="Label" parent="PanelUI"]
margin_left = 281.0
margin_top = 247.0
margin_right = 750.0
margin_bottom = 315.0
custom_colors/font_color = Color( 0.807843, 0.235294, 0.235294, 1 )
custom_fonts/font = SubResource( 17 )
text = "Collect all stars first!"

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="PanelUI"]

[node name="LevelComplete" type="AudioStreamPlayer2D" parent="PanelUI"]
stream = ExtResource( 19 )
volume_db = 13.983

[node name="CompletePanel" type="Panel" parent="PanelUI"]
margin_right = 18.0
margin_bottom = 19.0
custom_styles/panel = SubResource( 30 )

[node name="TextureRect" type="TextureRect" parent="PanelUI/CompletePanel"]
margin_left = 315.0
margin_top = 67.0
margin_right = 727.0
margin_bottom = 546.0
texture = ExtResource( 20 )
expand = true

[node name="HomeButton" type="Button" parent="PanelUI/CompletePanel"]
margin_left = 341.0
margin_top = 442.0
margin_right = 418.0
margin_bottom = 518.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="LevelPageButton" type="Button" parent="PanelUI/CompletePanel"]
margin_left = 436.0
margin_top = 444.0
margin_right = 514.0
margin_bottom = 518.0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )

[node name="RestartButton" type="Button" parent="PanelUI/CompletePanel"]
margin_left = 532.0
margin_top = 444.0
margin_right = 611.0
margin_bottom = 517.0
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )

[node name="ContinueButton" type="Button" parent="PanelUI/CompletePanel"]
margin_left = 625.0
margin_top = 445.0
margin_right = 705.0
margin_bottom = 517.0
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 28 )
custom_styles/normal = SubResource( 29 )

[node name="Star1" type="TextureRect" parent="PanelUI/CompletePanel"]
margin_left = 372.0
margin_top = 223.0
margin_right = 462.0
margin_bottom = 313.0
texture = ExtResource( 25 )
expand = true

[node name="Star2" type="TextureRect" parent="PanelUI/CompletePanel"]
margin_left = 479.0
margin_top = 210.0
margin_right = 569.0
margin_bottom = 300.0
texture = ExtResource( 25 )
expand = true

[node name="Star3" type="TextureRect" parent="PanelUI/CompletePanel"]
margin_left = 579.0
margin_top = 222.0
margin_right = 669.0
margin_bottom = 312.0
texture = ExtResource( 25 )
expand = true

[node name="ScoreLabel" type="Label" parent="PanelUI/CompletePanel"]
margin_left = 533.0
margin_top = 363.0
margin_right = 573.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 31 )

[node name="LevelOneLabel" type="Label" parent="PanelUI"]
visible = false
margin_left = 150.0
margin_top = 192.0
margin_right = 874.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 16 )
text = "Level 1"
align = 1

[node name="LivesUI" type="CanvasLayer" parent="."]

[node name="LivesContainer" type="HBoxContainer" parent="LivesUI"]
margin_left = 128.0
margin_top = 9.0
margin_right = 2644.0
margin_bottom = 440.0
rect_scale = Vector2( 0.119492, 0.109715 )

[node name="TextureRect" type="TextureRect" parent="LivesUI/LivesContainer"]
margin_right = 500.0
margin_bottom = 431.0
texture = ExtResource( 15 )

[node name="TextureRect2" type="TextureRect" parent="LivesUI/LivesContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 431.0
texture = ExtResource( 15 )

[node name="TextureRect3" type="TextureRect" parent="LivesUI/LivesContainer"]
margin_left = 1008.0
margin_right = 1508.0
margin_bottom = 431.0
texture = ExtResource( 15 )

[node name="TextureRect4" type="TextureRect" parent="LivesUI/LivesContainer"]
margin_left = 1512.0
margin_right = 2012.0
margin_bottom = 431.0
texture = ExtResource( 15 )

[node name="TextureRect5" type="TextureRect" parent="LivesUI/LivesContainer"]
margin_left = 2016.0
margin_right = 2516.0
margin_bottom = 431.0
texture = ExtResource( 15 )

[connection signal="body_entered" from="ExitPortal" to="Player" method="_on_Exit_Portal_body_entered"]
